[package]
name = "wasmgdb"
version = "0.1.3"
edition = "2021"
description = "gdb for WebAssembly"
authors = ["Sven Sauleau <sven@cloudflare.com>"]
license = "MIT"
keywords = ["wasm", "gdb", "debug", "coredump", "stack"]
repository = "https://github.com/xtuc/wasmgdb"


[dependencies]
gimli = "0.26.2"
wasm-edit = { version = "0.1.3" }
colored = "2.0.0"
env_logger = "0.9.1"
wasmgdb_ddbug_parser = { path = "../../gimli-rs/ddbug/parser", version = "0.3.1" }
log = "0.4.17"
nom = "7.1.1"
hex = "0.4.3"
